# bl1nk-skill-spec

skills/anthropics/frontend-design/: SKILL.md
skills/anthropics/prompt-engineering-expert/: AI Execution Prompt Template.md  SKILL.md
skills/custom/api-design/: SKILL.md
skills/custom/create-plan/: SKILL.md
skills/custom/cursor-rule-creator/: SKILL.md
skills/custom/markmap-mindmap-generator/: AGENTS.md  LICENSE  README.md  SKILL.md  pyproject.toml
skills/custom/markmap-mindmap-generator/scripts/: __init__.py  html_export.py  setup.sh
skills/custom/markmap-mindmap-generator/templates/: _.yaml
skills/custom/markmap-mindmap-generator/tests/: test_generator.py
skills/gurdasnijor/strategic-web-research/: SKILL.md
skills/notion/notion-knowledge-capture/: SKILL.md
